Add product variant synchronization api.